Fix min-height of #content-wrap

--- a/sigma.css
+++ b/sigma.css
@@ -62,7 +62,7 @@
 	position: relative;
 	margin: 1.5rem auto 0;
 	max-width: 67.5rem;
-	min-height: 80rem;
+	min-height: 135rem;
 	height: auto;
 }
 
